# grv

./: .coverage  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: bump-and-release.yml  ci.yml
scripts/: check_loc.py
src/grove/: cli.py  config.py  git.py  menu.py  status.py
src/grv/: __init__.py  cli.py  config.py  constants.py  git.py  menu.py  pr.py  status.py
src/gtwsp/: cli.py  config.py  menu.py  status.py
tests/: test_cli.py  test_config.py  test_git.py  test_menu.py  test_pr.py  test_status.py
