[project]
name = "gtwsp"
version = "0.1.0"
description = "Git workspace manager using worktrees"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
gtwsp = "gtwsp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gtwsp"]
